<resources>
    <string name="app_name">Dex Office Suite</string>
    <string name="dex"><b>DEX</b></string>
    <string name="officesuite"><b>Office Suite</b></string>
    <string name="developedby">Developed by Aayush Kumaria\nDesigned by Ajinkya Rajkar</string>
    <string name="logo">logo</string>
    <string name="welcome1">Welcome to the Beta Version of Dex Office Suite</string>
    <string name="welcome2">In the Current version, you get a variety of products out of the box. Pun Intended</string>
    <string name="welcome3">Don\'t feel like clicking around? No problem. Try our voice assistant to make everything easier</string>
    <string name="welcome4">Oh. We forgot. We have dark mode too. Enable it in the settings. And now you\'re all set. Enjoy</string>
    <string name="dot1">dot1</string>
    <string name="dot2">dot2</string>
    <string name="dot3">dot3</string>
    <string name="dot4">dot4</string>
    <string name="voice_assistant">Voice Assistant</string>
    <string name="settings">Settings</string>
    <string name="privacy_notice">Privacy Notice</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="developers">Developed by Aayush Kumaria\nDesigned by Ajinkya Rajkar\n© 2020</string>
    <string name="transparency_on_user_data">Transparency on User Data</string>
    <string name="privacy_1">We in no way are capturing any user data be it the photos you scan, or the drawings you make.\n\nWe have kept your privacy as our number one priority and to prove this feel free to check the data used by the app in your settings.\n\nNo Data Usage = No Data Capturing 😉</string>
    <string name="why_do_we_need_storage_read_write_permissions">Why Do We Need R/W \nPermissions?</string>
    <string name="privacy_2">The only way the app can access the photos you want to scan or perform OCR on, or the only way we can store those amazing drawing you drew is by asking for these permissions.\n\nThere is no other need for it we promise 😇</string>
    <string name="why_do_we_need_camera_permissions">Why Do We Need Camera \nPermissions?</string>
    <string name="privacy_3">We have put so many features into this app to prevent you from jumping between two or more apps. And that means moving between the camera and us.\n\nThe only time the camera is used is when you want to capture an image directly onto the app 😊</string>
    <string name="why_we_do_need_audio_permissions">Why We Do Need Audio \nPermissions?</string>
    <string name="privacy_4">One of our unique features is our Voice Assistant we like to call \'Dexer\' (Subject to change)\n\n For Dexer to hear your commands, the app would need audio permissions.\n\nSo feel free to speak your mind. We can\'t hear you 🎤</string>
    <string name="we_don_t_like_back_buttons_just_swipe_right">We Aren\'t Fond of Back Buttons. Just Swipe Right</string>
    <string name="animarrow">animarrow</string>
    <string name="ocr_scanner">OCR</string>
    <string name="scanner">SCANNER</string>
    <string name="pdf_reader">PDF READER</string>
    <string name="to_do">TO DO</string>
    <string name="scan">SCAN</string>
    <string name="choose_image">Choose Image</string>
    <string name="detect_image">Scan Now</string>
    <string name="text_guide_1"><u>Select an image:</u></string>
    <string name="text_guide_2"><u>Image Selected is:</u></string>
    <string name="text_guide_3"><u>Click Scan Now to Detect text</u></string>
    <string name="text_guide_4"><u>Detected text is:</u></string>
    <string name="preview_image">Preview Image</string>
    <string name="no_text">No text found</string>
    <string name="scan_again">Scan Again</string>
    <string name="display_uploadicon">display_uploadIcon</string>
    <string name="select_image_to_scan">Select image to scan</string>
    <string name="your_generated_pdf_is">Your Generated PDF Is:</string>
    <string name="creating_your_pdf_please_wait">Creating Your PDF. Please Wait</string>
    <string name="click_scan_now_to_start_scanning">Click Scan Now to Start Scanning</string>
    <string name="new_canvas">New Canvas</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="save_canvas">Save Canvas</string>
    <string name="black_paint">Black Paint</string>
    <string name="brown_paint">Brown Paint</string>
    <string name="red_paint">Red Paint</string>
    <string name="orange_theme">Orange Theme</string>
    <string name="yellow_paint">Yellow Paint</string>
    <string name="green_paint">Green Paint</string>
    <string name="pink_paint">Pink Paint</string>
    <string name="purple_paint">Purple Paint</string>
    <string name="blue_paint">Blue Paint</string>
    <string name="white_paint">White Paint</string>
    <string name="grey_paint">Grey Paint</string>
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="click_the_icon_to_create_your_first_note">Click the Icon to Create your First Note</string>
    <string name="find_pdfs_please_wait">Find PDFs. Please Wait</string>
    <string name="voice_typing">Voice Typing</string>
    <string name="no_tasks_created_yet">No Tasks Created. Yet....</string>
    <string name="pending_tasks">Pending Tasks</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="threedots">⋮</string>
    <string name="optical_character_recognition">Optical Character Recognition</string>
    <string name="document_scanner">Document Scanner</string>
    <string name="canvas">Canvas</string>
    <string name="notepad">Notepad</string>
    <string name="pdf_viewer">Pdf Viewer</string>
    <string name="to_do_tasks">To-do Tasks</string>
</resources>