<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/closeEnough"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/canvas_button"
            android:src="@drawable/ic_baseline_autorenew_24"
            android:layout_margin="5dp"
            android:tint="?attr/textColor"
            android:id="@+id/new_IMG"
            android:contentDescription="@string/new_canvas" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/canvas_button"
            android:src="@drawable/brush_svg"
            android:layout_margin="5dp"
            android:tint="?attr/textColor"
            android:contentDescription="@string/brush"
            android:id="@+id/draw_IMG"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/canvas_button"
            android:src="@drawable/eraser_svg"
            android:layout_margin="5dp"
            android:tint="?attr/textColor"
            android:contentDescription="@string/eraser"
            android:id="@+id/erase_IMG"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/canvas_button"
            android:src="@drawable/ic_baseline_save_24"
            android:layout_margin="5dp"
            android:tint="?attr/textColor"
            android:contentDescription="@string/save_canvas"
            android:id="@+id/save_IMG"/>
    </LinearLayout>

    <com.dex.officesuite.CanvasDrawer
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ffffff"
        android:id="@+id/DrawingView"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paint_colors"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#000000"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#000000"
            android:contentDescription="@string/black_paint" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#ff660000"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#ff660000"
            android:contentDescription="@string/brown_paint" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#ffff0000"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#ffff0000"
            android:contentDescription="@string/red_paint"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#ffff6600"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#ffff6600"
            android:contentDescription="@string/orange_theme" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#ffffcc00"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#ffffcc00"
            android:contentDescription="@string/yellow_paint" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#ff009999"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#ff009999"
            android:contentDescription="@string/green_paint"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#ffff00ff"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#ffff00ff"
            android:contentDescription="@string/pink_paint" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#ff990099"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#ff990099"
            android:contentDescription="@string/purple_paint" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#00008b"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#00008b"
            android:contentDescription="@string/blue_paint"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#ffffffff"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#ffffffff"
            android:contentDescription="@string/white_paint"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#ff787878"
            android:onClick="paintClicked"
            android:src="@drawable/paint_normal"
            android:tag="#ff787878"
            android:contentDescription="@string/grey_paint"/>

    </LinearLayout>

</LinearLayout>