<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constl"
    android:background="?attr/bgColor">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/voice_assistant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/dots"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome3"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:textColor="?attr/metaTextColor"
        android:visibility="visible"
        android:layout_marginBottom="30dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dots"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dot"
            android:layout_margin="2dp"
            android:tint="@color/blue_title"
            android:id="@+id/dot1"
            android:contentDescription="@string/dot1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:src="@drawable/ic_dot"
            android:layout_toEndOf="@id/dot1"
            android:tint="@color/blue_title"
            android:id="@+id/dot2"
            android:contentDescription="@string/dot2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:src="@drawable/ic_dot"
            android:layout_toEndOf="@id/dot2"
            android:tint="@color/blue_title"
            android:id="@+id/dot3"
            android:contentDescription="@string/dot3" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:src="@drawable/ic_dot"
            android:layout_toEndOf="@id/dot3"
            android:tint="?attr/metaTextColor"
            android:id="@+id/dot4"
            android:contentDescription="@string/dot4" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>