<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/docscanner_background"
    tools:context=".ScannerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guide1_tv"
        android:visibility="invisible"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginStart="50dp"
        android:textSize="20sp"
        android:textColor="?attr/textColor"
        android:text="@string/your_generated_pdf_is"/>

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/guide1_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/guide1_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="30dp"

        >
        <ImageView
            android:id="@+id/upload_icon"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/upload_icon"
            android:layout_margin="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/display_uploadicon"
            app:tint="?attr/metaTextColor" />

        <TextView
            android:id="@+id/text_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:gravity="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/upload_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/click_scan_now_to_start_scanning"
            android:textColor="?attr/textColor"
            android:textSize="20sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/scan_multi"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pdfView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"
        android:singleLine="true"
        android:background="@drawable/scanner_btn_design"
        android:textColor="?attr/textColor"
        android:text="@string/scan" />

    <ProgressBar
        android:id="@+id/simpleProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creating_your_pdf_please_wait"
        app:layout_constraintTop_toBottomOf="@id/simpleProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        android:id="@+id/loading"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>