<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background_OCR"
    android:layerType="software"
    android:background="@drawable/ocr_background"
    tools:context=".OcrActivity">
    <TextView
        android:id="@+id/text_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_guide_1"
        android:textColor="?attr/textColor"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/text_guide"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/preview_image" />

    <TextView
        android:id="@+id/detectTextGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/text_guide_3"
        android:textColor="?attr/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/ScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.705" />

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        app:layout_constraintTop_toBottomOf="@id/copyButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:background="?attr/closeEnough"
        android:visibility="invisible">

        <TextView
            android:id="@+id/outputText"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />

    </ScrollView>

    <Button
        android:id="@+id/copyButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:background="?attr/actionModeCopyDrawable"
        android:backgroundTint="?attr/metaTextColor"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <Button
        android:id="@+id/chooseImageButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/ocr_btn_design"
        android:textColor="?attr/textColor"
        android:text="@string/choose_image" />

    <Button
        android:id="@+id/scanNow"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="50dp"
        android:visibility="invisible"
        android:layout_marginBottom="15dp"
        android:singleLine="true"
        android:background="@drawable/ocr_btn_design"
        android:textColor="?attr/textColor"
        android:text="@string/detect_image" />

</androidx.constraintlayout.widget.ConstraintLayout>