<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/todo_background"
    tools:context=".TodoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/pending_tasks"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:id="@+id/pendingTV"
        android:textColor="?attr/textColor"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pendingTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:dividerHeight="0.5sp"
        android:layout_margin="10dp"
        android:visibility="visible"
        android:id="@+id/listview"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/blue_title"
        android:id="@+id/divider"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/listview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/completed_tasks"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:id="@+id/completedTV"
        android:textColor="?attr/textColor"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/completedTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:dividerHeight="0.5sp"
        android:layout_margin="10dp"
        android:visibility="visible"
        android:id="@+id/listview1"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_CL"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/plus_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_baseline_add_circle_24"
            android:contentDescription="@string/add_note"
            app:tint="?attr/inBetween">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/plus_icon"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:textColor="?attr/textColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/no_tasks_created_yet">

        </TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>